--- a/roles/argocd/tasks/main.yml
+++ b/roles/argocd/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: Copy the argocd values file based on the deployment
+  template:
+    src: argocd-values.yml.j2
+    dest: argocd-values.yml
+
 - name: Create a k8s env namespace
   k8s:
     name: "argocd"
@@ -5,10 +10,16 @@
     kind: Namespace
     state: present
 
-- name: Install through manifest
-  kubernetes.core.k8s:
-    state: present
-    src: https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+- name: Helm repo add
+  command: helm repo add argo https://argoproj.github.io/argo-helm
 
+- name: Helm repo update
+  command: helm repo update
 
-#kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath='{.data.password}' | base64 -d
+- name: Init ArgoCD
+  command: >
+    helm upgrade -i --history-max=1 \
+    argocd \
+    --namespace argocd \
+    -f argocd-values.yml \
+    argo/argo-cd
